--- a/breweries_list.html
+++ b/breweries_list.html
@@ -5,6 +5,7 @@
     <title>About</title>
     <link rel="stylesheet" href="/static/css/main.css"/>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+     <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Ewert" rel="stylesheet">
 </head>
 
@@ -20,7 +21,26 @@
     
     <h1>So what is this all about?</h1>
     <p>This is a paragraph.</p>
+    <button type="button" onclick="get_data()" class="w3-button">Click me!</button>
 
+
+
+    <script>
+    function get_data() {
+  $.ajax({
+    url: "rank",
+    type: 'GET',
+    dataType: 'json',
+    success(response) {
+     console.log(response)
+    }, error(jqXHR, status, errorThrown) {
+      console.log(jqXHR);
+    }
+  });
+}
+
+
+    </script>
 </body>
 
 </html>
