--- a/breweries_list.html
+++ b/breweries_list.html
@@ -21,7 +21,7 @@
     
     <button type="button" onclick="get_data()" class="w3-button">Click me!</button>
   <div>
-<table id="data" style="width:100%" > 
+<table class="w3-table-all" id="data" style="width:100%">
 </table>
  </div>
     <script>
