about page is 1% less lame

--- a/about.html
+++ b/about.html
@@ -18,8 +18,8 @@
             <h3 style="float:right;  margin-bottom:0; padding-bottom:0;"><a class="w3-bar-item w3-button" href="breweries_list">Ranked List</a></h3>
     </div>
     
-    <h1>So what is this all about?</h1>
-    <p>This is a paragraph.</p>
+    <h1>What is the great map of Brews?</h1>
+    <p>Do you like beer? Do you lke maps and data? If so you've come to the right place. You can use this map to track where you've been, rate breweries and see your current location in relation to nearby breweries.</p>
 
 </body>
 
