--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link href="https://fonts.googleapis.com/css?family=Ewert" rel="stylesheet">
 
+
+     <script src="leaflet-sidebar.js"></script>
+
+     <script src="main.js"></script>
+
 </head>
 
 <body>
@@ -91,52 +96,10 @@
     </div>
 
 
-    <script src="leaflet-sidebar.js"></script>
+
 
 
     <script>
-        L.mapbox.accessToken = 'pk.eyJ1Ijoic2FtZG90c29uMTk5MiIsImEiOiJRc2VOSXpvIn0.Bhg-j6XJ2sQGI48SjKOuYg';
-        var map = L.mapbox.map('map', 'mapbox.streets')
-            .setView([38.03785, -84.850783], 3);
-
-
-        var sidebar = L.control.sidebar('sidebar', {
-            position: 'right'
-        }).addTo(map);
-
-
-        map.addControl(L.control.locate({
-            locateOptions: {
-                maxZoom: 10
-            }
-        }));
-
-        var beer = omnivore.csv("/static/datasets/Breweries.csv", null, L.mapbox.featureLayer()).on("ready", function() {
-            var markers = L.markerClusterGroup({
-                chunkedLoading: true
-            });
-
-
-            beer.on('click', function(a) {
-                console.log(a.layer.feature.properties.name);
-                var content = a.layer.feature.properties.name;
-
-            })
-
-
-            markers.addLayer(beer);
-            markers.bindPopup(function(layer) {
-                console.log(layer.feature.properties.name)
-                return layer.feature.properties.name
-            }).addTo(map);
-
-
-        });
-
-
-        L.easyButton('fa-home', function() {
-            map.setView([38.03785, -84.850783], 4);
-        }).addTo(map);
 
     </script>
 </body>
