--- a/breweries_list.html
+++ b/breweries_list.html
@@ -3,32 +3,55 @@
 
 <head>
     <title>About</title>
-    <link rel="stylesheet" href="/static/css/main.css"/>
+    <link rel="stylesheet" href="/static/css/main.css" />
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-     <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Ewert" rel="stylesheet">
 </head>
+
 <body>
-     <div class="w3-bar-block w3-light-blue w3-small w3-card w3-panel w3-display-container">
-            <h1 style="font-family: 'Ewert', cursive; font-weight: 500; margin-bottom:0; padding-bottom:0;" class="title w3-bar-item w3-xxxlarge">The Great Map of Brews</h1> 
-            <h3 style="float:right; margin-bottom:0; padding-bottom:0;"><a class="w3-bar-item w3-button" href="index">Map</a> </h3>
-            <h3 style="float:right; margin-bottom:0; padding-bottom:0;"><a class="w3-bar-item w3-button" href="join">Login or Join</a></h3>
-            <h3 style="float:right;  margin-bottom:0; padding-bottom:0;"><a class="w3-bar-item w3-button" href="about">About</a></h3>
-            <h3 style="float:right;  margin-bottom:0; padding-bottom:0;"><a class="w3-bar-item w3-button" href="breweries_list">Ranked List</a></h3>
-            <h3 style="float:right;  margin-bottom:0; padding-bottom:0;"><a class="w3-bar-item w3-button" href="profile">Profile</a></h3>
+    <div class="w3-bar-block w3-light-blue w3-small w3-card w3-panel w3-display-container">
+        <h1 style="font-family: 'Ewert', cursive; font-weight: 500; margin-bottom:0; padding-bottom:0;" class="title w3-bar-item w3-xxxlarge">The Great Map of Brews</h1>
+        <h3 style="float:right; margin-bottom:0; padding-bottom:0;"><a class="w3-bar-item w3-button" href="index">Map</a> </h3>
+        <h3 style="float:right; margin-bottom:0; padding-bottom:0;"><a class="w3-bar-item w3-button" href="join">Login or Join</a></h3>
+        <h3 style="float:right;  margin-bottom:0; padding-bottom:0;"><a class="w3-bar-item w3-button" href="about">About</a></h3>
+        <h3 style="float:right;  margin-bottom:0; padding-bottom:0;"><a class="w3-bar-item w3-button" href="breweries_list">Ranked List</a></h3>
+        <h3 style="float:right;  margin-bottom:0; padding-bottom:0;"><a class="w3-bar-item w3-button" href="profile">Profile</a></h3>
     </div>
+
+    <input class="w3-input w3-animate-input" type="text" id="query" style="width:135px"><br>
     <button type="button" onclick="get_data()" class="w3-button">Get Data</button>
-    <input class="w3-input w3-animate-input" type="text"  id="query" style="width:135px"><br>
-    <button type="button" onclick="get_brewery()" class="w3-button">Get Brewery</button>
-  <div>
-<table class="w3-table-all" id="data" style="width:100%">
-</table>
- </div>
+    <div>
+        <table class="w3-table-all" id="data" style="width:100%">
+        </table>
+    </div>
     <script>
+        var query = document.getElementById("query").value
 
-        var query =document.getElementById("query").value
+        function get_data(query) {
+            console.log(query)
 
-    function get_data() {
+            $.ajax({
+                url: "get_data",
+                type: 'POST',
+                data: query,
+                dataType: 'json',
+                success(response) {
+                    console.log(response);
+                    var data = JSON.parse(response);
+                    console.log(data);
+                    list = "<tr><th>Name</th><th> Latitude</th><th>Longitude</th>";
+                    for (i in data) {
+                        list += "<tr><th>" + (data[i].name) + "</th><th>" + (data[i].latitude) + "</th><th>" + (data[i].longitude) + "</th></tr>"
+                    }
+                    document.getElementById("data").innerHTML = list;
+                },
+                error(jqXHR, status, errorThrown) {
+                    console.log(jqXHR);
+                }
+            });
+        }
+        /*
   $.ajax({
     url: "rank",
     type: 'GET',
@@ -44,30 +67,32 @@ document.getElementById("data").innerHTML =list;
       console.log(jqXHR);
     }
   });
-}
-    function get_brewery(query) {
-         $.ajax({
-    url: "get_brewery",
-    type: 'GET',
-    data: query,
-    dataType: 'json',
-    success(response) {
-     console.log(response);
-var data =JSON.parse(response);
-console.log(data);
-list="<tr><th>Name</th><th> Latitude</th><th>Longitude</th>";
-for(i in data){list+="<tr><th>"+(data[i].name)+"</th><th>"+(data[i].latitude)+"</th><th>"+(data[i].longitude)+"</th></tr>"}
-document.getElementById("data").innerHTML =list;
-    }, error(jqXHR, status, errorThrown) {
-      console.log(jqXHR);
-    }
-  });
-}
+*/
+        function get_brewery(query)
 
-
+        {
+            $.ajax({
+                url: "get_brewery",
+                type: 'GET',
+                data: query,
+                dataType: 'json',
+                success(response) {
+                    console.log(response);
+                    var data = JSON.parse(response);
+                    console.log(data);
+                    list = "<tr><th>Name</th><th> Latitude</th><th>Longitude</th>";
+                    for (i in data) {
+                        list += "<tr><th>" + (data[i].name) + "</th><th>" + (data[i].latitude) + "</th><th>" + (data[i].longitude) + "</th></tr>"
+                    }
+                    document.getElementById("data").innerHTML = list;
+                },
+                error(jqXHR, status, errorThrown) {
+                    console.log(jqXHR);
+                }
+            });
+        }
 
     </script>
 </body>
 
 </html>
-
