change POST to GET

--- a/breweries_list.html
+++ b/breweries_list.html
@@ -34,8 +34,9 @@
 
             $.ajax({
                 url: "get_data",
-                type: 'POST',
+                type: 'GET',
                 data: query,
+                contentType: 'application/json',
                 dataType: 'json',
                 success(response) {
                     console.log(response);
