--- a/breweries_list.html
+++ b/breweries_list.html
@@ -27,7 +27,7 @@
     </div>
     <script>
 
-        function get_data(query) {
+        function get_data() {
              var query = JSON.stringify({
         "query": (document.getElementById("query").value)})
          console.log(query)
