query variable added

--- a/breweries_list.html
+++ b/breweries_list.html
@@ -32,8 +32,8 @@
         "query": (document.getElementById("query").value)})
          console.log(query)
 
-*/
-            var query="a"
+*/ var query=document.getElementById("query").value)
+
             $.ajax({
                 url: "get_data/"+query,
                 type: 'GET',
