--- a/breweries_list.html
+++ b/breweries_list.html
@@ -32,7 +32,7 @@
         "query": (document.getElementById("query").value)})
          console.log(query)
 
-*/ var query=document.getElementById("query").value)
+*/ var query=document.getElementById("query").value
 
             $.ajax({
                 url: "get_data/"+query,
