--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     <link rel="stylesheet" href="/static/css/main.css" />
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link href="https://fonts.googleapis.com/css?family=Ewert" rel="stylesheet">
-    <script src="/public/js/leaflet-sidebar.js"></script>
-    <script src="public/js/main.js"></script>
+    <script src="/static/js/leaflet-sidebar.js"></script>
+    <script src="/static/js/main.js"></script>
 
 </head>
 <body>
