console.log(param)

--- a/breweries_list.html
+++ b/breweries_list.html
@@ -35,7 +35,7 @@
          console.log(query)
  var query=document.getElementById("query").value
 
-*/
+*/console.log(param)
             $.ajax({
                 url: "get_data/param="+param,
                 type: 'GET',
