all kinds of beer, test ssh

--- a/profile.html
+++ b/profile.html
@@ -41,7 +41,10 @@
   <label>Lager</label></p>   
   <p>
   <input class="w3-radio" type="radio" name="other" value="other">
-  <label>I don't like beer: Hard ciders</label></p>  
+  <label>I don't like beer: Hard ciders</label></p> 
+       <p>
+  <input class="w3-radio" type="radio" name="all" value="lager">
+  <label>Every Kind of beer</label></p>   
 </form>
         
         
