--- a/join.html
+++ b/join.html
@@ -40,7 +40,7 @@
                 <p>
                     <li> <input class="w3-input" type="text" id="re_password_signup" /></li>
                     <label>Retype password</label></p>
-                <li><button class="w3-button w3-section w3-grey" onclick="signUp()">Submit</button></li>
+                <li><button class="w3-button w3-section w3-grey" onclick="users('signUp')">Submit</button></li>
             </ul>
         </div>
 
@@ -55,7 +55,7 @@
                 <p>
                     <li> <input class="w3-input" type="text" id="password_login" /></li>
                     <label>Password</label></p>
-                <li><button class="w3-button w3-section w3-grey" onclick="signIn()">Submit</button></li>
+                <li><button class="w3-button w3-section w3-grey" onclick="users('signIn')">Submit</button></li>
             </ul>
 
         </div>
