param changed in list

--- a/breweries_list.html
+++ b/breweries_list.html
@@ -37,7 +37,7 @@
 
 */console.log(param)
             $.ajax({
-                url: "get_data/param="+param,
+                url: "get_data/"+param,
                 type: 'GET',
                 dataType: 'json',
                 success(response) {
