bug fix with existing user check

--- a/join.html
+++ b/join.html
@@ -21,6 +21,8 @@
             <h3 style="float:right;  margin-bottom:0; padding-bottom:0;"><a class="w3-bar-item w3-button" href="profile">Profile</a></h3>
     </div>
 
+    <div>  <button class="w3-bar-item w3-button tablink" onclick="sign_out()">Sign Up</button> </div>
+
     <div id="box" class="w3-container w3-half">
         <div class="w3-panel">
             <button class="w3-bar-item w3-button tablink" onclick="openTab(event, 'sign-up')">Sign Up</button>
@@ -59,6 +61,10 @@
             </ul>
 
         </div>
+
+
+        
+
 
     </div>
 
