lccate control changed to CDN

--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
 
     <link href="/static/css/easy-button.css" rel="stylesheet">
     <script src="/static/js/easy-button.js"></script>
-    <link rel="stylesheet" href="/static/css/L.Control.Locate.min.css" />
-    <script src="/static/js/L.Control.Locate.min.js" charset="utf-8"></script>
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://domoritz.github.io/leaflet-locatecontrol/dist/L.Control.Locate.min.css" />
+    <script src="https://domoritz.github.io/leaflet-locatecontrol/dist/L.Control.Locate.min.js" charset="utf-8"></script>
     <link rel="stylesheet" href="/static/css/MarkerCluster.css" />
     <link rel="stylesheet" href="/static/css/MarkerCluster.Default.css" />
     <script src="/static/js/leaflet.markercluster.js" charset="utf-8"></script>
@@ -71,6 +72,14 @@
 
                     <p id="demo">A responsive sidebar for mapping libraries like <a href="https://leafletjs.com/">Leaflet</a> or <a href="https://openlayers.org/">OpenLayers</a>.</p>
 
+                </div>
+
+                <div class="sidebar-pane" id="profile">
+                    <h1 class="sidebar-header">Sign in<span class="sidebar-close"><i class="fa fa-caret-left"></i></span></h1>
+                </div>
+
+                <div class="sidebar-pane" id="profile">
+                    <h1 class="sidebar-header">Sign up<span class="sidebar-close"><i class="fa fa-caret-left"></i></span></h1>
                 </div>
 
                 <div class="sidebar-pane" id="profile">
