--- a/join.html
+++ b/join.html
@@ -21,7 +21,7 @@
             <h3 style="float:right;  margin-bottom:0; padding-bottom:0;"><a class="w3-bar-item w3-button" href="profile">Profile</a></h3>
     </div>
 
-    <div>  <button class="w3-bar-item w3-button tablink" onclick="sign_out()">Sign Up</button> </div>
+    <div>  <button class="w3-bar-item w3-button tablink" onclick="sign_out()">Sign Out</button> </div>
 
     <div id="box" class="w3-container w3-half">
         <div class="w3-panel">
