--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="/static/css/MarkerCluster.css" />
     <link rel="stylesheet" href="/static/css/MarkerCluster.Default.css" />
     <script src="/static/js/leaflet.markercluster.js" charset="utf-8"></script>
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
     <!--
     <link rel="stylesheet" href="/static/css/L.Control.Sidebar.css" />
     <link rel="stylesheet" href="/static/css/L.Control.Sidebar.scss" />
