--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <script src="/static/js/leaflet.markercluster.js" charset="utf-8"></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
   
-    <link rel="stylesheet" href="/static/css/L.Control.Sidebar.css" />
-    <link rel="stylesheet" href="/static/css/L.Control.Sidebar.scss" />
+    <link rel="stylesheet" type="text/css" href="/static/css/L.Control.Sidebar.css" />
+    <link rel="stylesheet" type="text/scss" href="/static/css/L.Control.Sidebar.scss" />
     <script src="/static/js/L.Control.Sidebar.js" charset="utf-8"></script>
      <!--
     <link rel="stylesheet" href="/static/css/leaflet-sidebar.css" />
