--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
     <link rel="stylesheet" href="/static/css/main.css" />
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link href="https://fonts.googleapis.com/css?family=Ewert" rel="stylesheet">
-    <script src="/static/js/leaflet-sidebar.js"></script>
     <script src="/static/js/main.js"></script>
 
 </head>
@@ -77,6 +76,7 @@
 });
 
 map.addControl(sidebar);
+sidebar.show();
 
  map.addControl(L.control.locate({
      locateOptions: {
