--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
 });
 
 map.addControl(sidebar);
-sidebar.show();
+
+sidebar.toggle();
 
  map.addControl(L.control.locate({
      locateOptions: {
