--- a/index.html
+++ b/index.html
@@ -49,21 +49,10 @@
         <h3 style="float:right;  margin-bottom:0; padding-bottom:0;"><a class="w3-bar-item w3-button" href="profile">Profile</a></h3>
     </div>
 
-    <div class="w3-card" id='map'>
-        <div id="sidebar" class="sidebar collapsed">
-            <!-- Nav tabs -->
-            <div class="sidebar-tabs">
-                <ul role="tablist">
-                    <li><a href="#home" role="tab"><i class="fa fa-bars"></i></a></li>
-                    <li><a href="#profile" role="tab"><i class="fa fa-user"></i></a></li>
-                    <li class="disabled"><a href="#messages" role="tab"><i class="fa fa-envelope"></i></a></li>
-                </ul>
-
-                <ul role="tablist">
-                    <li><a href="#settings" role="tab"><i class="fa fa-gear"></i></a></li>
-                </ul>
-            </div>
-        </div>
+    <div class="w3-card" id='map'> </div>
+    
+    <div id="sidebar">
+        <h1>leaflet-sidebar</h1>
     </div>
 
     <script>
