--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
     <div class="w3-card" id='map'> </div>
 
     <div id="sidebar">
+            <div class="w3-bar w3-black">
+                    <button class="w3-bar-item w3-button" onclick="changeTab('London')">Account</button>
+                    <button class="w3-bar-item w3-button" onclick="changeTab('Paris')">Brewery</button>
+                    <button class="w3-bar-item w3-button" onclick="ChangeTab('Tokyo')">About</button>
+                  </div>
         <div>  <button class="w3-bar-item w3-button tablink" onclick="sign_out()">Sign Out</button> </div>
         
             <div id="box" class="w3-container w3-half">
