tabs added to sidebar

--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
 
     <div id="sidebar">
         <div class="w3-bar w3-black">
-            <button class="w3-bar-item w3-button" onclick="openTab('event','account')">Account</button>
-            <button class="w3-bar-item w3-button" onclick="openTab('event', 'brewery')">Brewery</button>
-            <button class="w3-bar-item w3-button" onclick="openTab('event', 'about')">About</button>
+            <button class="w3-bar-item w3-button tablink" onclick="openTab('event','account')">Account</button>
+            <button class="w3-bar-item w3-button tablink" onclick="openTab('event', 'brewery')">Brewery</button>
+            <button class="w3-bar-item w3-button tablink" onclick="openTab('event', 'about')">About</button>
         </div>
         <div id="account" class="w3-container w3-card">
             <div>
@@ -139,7 +139,7 @@
         <div id="brewery" class="w3-container w3-card">
             <h1> BEER! </h1>
         </div>
-        
+
         <div id="about" class="w3-container w3-card">
             <h1>What is the great map of Brews?</h1>
             <p>Do you like beer? Do you lke maps and data? If so you've come to the right place. You can use this map to track
