tabs added to sidebar

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <button class="w3-bar-item w3-button tablink" onclick="openTab('event', 'brewery')">Brewery</button>
             <button class="w3-bar-item w3-button tablink" onclick="openTab('event', 'about')">About</button>
         </div>
-        <div id="account" class="w3-container w3-card">
+        <div id="account" class="w3-container Tab w3-card">
             <div>
                 <button class="w3-bar-item w3-button tablink" onclick="sign_out()">Sign Out</button>
             </div>
@@ -136,11 +136,11 @@
                 </div>
             </div>
         </div>
-        <div id="brewery" class="w3-container w3-card">
+        <div id="brewery" class="w3-container Tab w3-card">
             <h1> BEER! </h1>
         </div>
 
-        <div id="about" class="w3-container w3-card">
+        <div id="about" class="w3-container Tab w3-card">
             <h1>What is the great map of Brews?</h1>
             <p>Do you like beer? Do you lke maps and data? If so you've come to the right place. You can use this map to track
                 where you've been, rate breweries and see your current location in relation to nearby breweries.</p>
