--- a/index.html
+++ b/index.html
@@ -70,74 +70,73 @@
             <button class="w3-bar-item w3-button tablink" onclick="openTab(event, 'sign-in')">Sign In</button>
             <button class="w3-bar-item w3-button tablink" onclick="sign_out()">Sign Out</button>
         </div>
-                <div id="sign-up" class="w3-container w3-card Tab w3-margin-top">
-                    <ul id class="w3-container form">
-                        <p>
-                            <li>
-                                <input class="w3-input" type="text" id="email_signup" />
-                            </li>
-                            <label>Email</label>
-                        </p>
-                        <p>
-                            <li>
-                                <input class="w3-input" type="text" id="username_signup" />
-                            </li>
-                            <label>Username</label>
-                        </p>
-                        <p>
-                            <li>
-                                <input class="w3-input" type="text" id="password_signup" />
-                            </li>
-                            <label>Password</label>
-                        </p>
-                        <p>
-                            <li>
-                                <input class="w3-input" type="text" id="re_password_signup" />
-                            </li>
-                            <label>Retype password</label>
-                        </p>
-                        <li>
-                            <button class="w3-button w3-section w3-grey" onclick="users('signUp')">Submit</button>
-                        </li>
-                    </ul>
-                </div>
-                <div id="sign-in" style="display:none" class="w3-container w3-card Tab w3-margin-top">
-                    <ul class="w3-container form">
-                        <p>
-                            <li>
-                                <input class="w3-input" type="text" id="email_login" />
-                            </li>
-                            <label>Email</label>
-                        </p>
-                        <p>
-                            <li>
-                                <input class="w3-input" type="text" id="username_login" />
-                            </li>
-                            <label>Username</label>
-                        </p>
-                        <p>
-                            <li>
-                                <input class="w3-input" type="text" id="password_login" />
-                            </li>
-                            <label>Password</label>
-                        </p>
-                        <li>
-                            <button class="w3-button w3-section w3-grey" onclick="users('signIn')">Submit</button>
-                        </li>
-                    </ul>
-                </div>
+        <div id="sign-up" class="w3-container w3-card Tab w3-margin-top">
+            <ul id class="w3-container form">
+                <p>
+                    <li>
+                        <input class="w3-input" type="text" id="email_signup" />
+                    </li>
+                    <label>Email</label>
+                </p>
+                <p>
+                    <li>
+                        <input class="w3-input" type="text" id="username_signup" />
+                    </li>
+                    <label>Username</label>
+                </p>
+                <p>
+                    <li>
+                        <input class="w3-input" type="text" id="password_signup" />
+                    </li>
+                    <label>Password</label>
+                </p>
+                <p>
+                    <li>
+                        <input class="w3-input" type="text" id="re_password_signup" />
+                    </li>
+                    <label>Retype password</label>
+                </p>
+                <li>
+                    <button class="w3-button w3-section w3-grey" onclick="users('signUp')">Submit</button>
+                </li>
+            </ul>
         </div>
-        <div id="brewery" class="w3-container Tab w3-card">
+        <div id="sign-in" style="display:none" class="w3-container w3-card Tab w3-margin-top">
+            <ul class="w3-container form">
+                <p>
+                    <li>
+                        <input class="w3-input" type="text" id="email_login" />
+                    </li>
+                    <label>Email</label>
+                </p>
+                <p>
+                    <li>
+                        <input class="w3-input" type="text" id="username_login" />
+                    </li>
+                    <label>Username</label>
+                </p>
+                <p>
+                    <li>
+                        <input class="w3-input" type="text" id="password_login" />
+                    </li>
+                    <label>Password</label>
+                </p>
+                <li>
+                    <button class="w3-button w3-section w3-grey" onclick="users('signIn')">Submit</button>
+                </li>
+            </ul>
+        </div>
+        <div id="brewery" class="w3-container w3-card Tab w3-margin-top">
             <h1> BEER! </h1>
         </div>
 
-        <div id="about" class="w3-container Tab w3-card">
+        <div id="about" class="w3-container w3-card Tab w3-margin-top">
             <h1>What is the great map of Brews?</h1>
             <p>Do you like beer? Do you lke maps and data? If so you've come to the right place. You can use this map to track
                 where you've been, rate breweries and see your current location in relation to nearby breweries.</p>
         </div>
-
     </div>
+
 
     <script>
         L.mapbox.accessToken = 'pk.eyJ1Ijoic2FtZG90c29uMTk5MiIsImEiOiJRc2VOSXpvIn0.Bhg-j6XJ2sQGI48SjKOuYg';
