--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             </ul>
         </div>
         <div id="brewery" class="w3-container w3-card Tab w3-margin-top">
-            <h1 id="brewery_select"> </h1>
+                <table class="w3-table-all" id="brewery_select" style="width:100%"> </table>
         </div>
 
         <div id="about" class="w3-container w3-card Tab w3-margin-top">
